--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -3,13 +3,14 @@ zh-CN:
   copyright: 版权所有
   app_name: PMS
   company_name: CTPT
-  button:
+  buttons:
     save: 保存
     edit: 编辑
     delete: 删除
+    search: 搜索
   confirms:
     delete: 确定要删除这一条记录吗？
-  label:
+  labels:
     last_modified_at: 最后编辑于
   id_number_types:
     shenfenzheng: 身份证
