--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -74,9 +74,9 @@ zh-CN:
         trustor_bank_account_name: 托管户名称
         trustor_bank_name: 托管账户开户行
         trustor_bank_account_number: 托管户账号
-        securities_account_name: 证券户名称
-        securities_bank_name: 证券户开户行
-        securities_capital_account: 证券资金账号
+        securities_broker_account_name: 证券户名称
+        securities_broker_name: 证券户开户行
+        securities_broker_account_number: 证券资金账号
         valuation_out_sourcing: 估值外包
         deposited_at: 募集户入金日期
         delegation_started_at: 委托资产委托起始日
