--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -47,6 +47,13 @@ zh-CN:
     jiegua: 解挂（007）
     zengjiajiaoyizhanghu: 增加交易账户（008）
     biangengchexiaojiaoyizhanghu: 变更/撤销交易账户（009）
+  institution_types:
+    human: 自然人
+    securities: 证券（或其子公司）
+    fund: 基金（或其子公司）
+    trust: 信托（或其子公司）
+    bank: 银行（或其子公司）
+    future: 期货（或其子公司）
   activerecord:
     text:
       back_to_list: '回到%{model}列表'
@@ -158,7 +165,15 @@ zh-CN:
         fund_account_number: 投资人基金帐号
       consultant:
         name: 名称
-        department: 推荐部门
+        department_id: 投顾引进部门
+        short_name: 简称
+        capital: 注册资本
+        person_in_charge_name: 法人/实际负责人
+        company_address: 实际办公地址
+        institution_type: 机构类型
+        is_qualified_3rd_party_institution: 是否符合合格第三方机构要求
+        tabs:
+          products: 产品列表
       securities_broker:
         name: 名称
         bank_id: 开户银行
