--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -104,7 +104,7 @@ zh-CN:
         name: 名称
         client_code: 客户编号
         short_name: 简称
-        product_manager: 产品经理
+        staff: 产品经理
         code: 产品编码
         running_status: 运行状态
         product_dev_type: 研发类别
@@ -145,7 +145,9 @@ zh-CN:
         operation_department: 产品运作部门
         consultant_name: 投顾名称
         tabs:
+          consultant: 投顾
           trustor: 托管人
+          money_records: 出入金记录
           fee: 费率
           accounts: 交易账号
           clients: 投资人
