--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -144,6 +144,7 @@ zh-CN:
         consultant_reference_department: 投顾引进部门
         operation_department: 产品运作部门
         consultant_name: 投顾名称
+        consultant: 投顾
         tabs:
           consultant: 投顾
           trustor: 托管人
