--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -78,7 +78,6 @@ zh-CN:
       trustor: 托管人
       securities_broker: 券商
       user: 系统帐号
-      product_manager: 产品经理
       staff: 人员
     attributes:
       time_stamp:
@@ -94,6 +93,9 @@ zh-CN:
         last_sign_in_ip: 最近登录IP
         sign_in_count: 登录次数
         staff_name: 授权予
+        roles: 系统权限
+        password: 密码
+        password_confirmation: 密码确认
       department:
         name: 名称
       trustor:
