--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -119,6 +119,7 @@ zh-CN:
         is_one_to_many: 是否为一对多产品
         superior_code: 优先级产品编码
         inferior_code: 劣后级产品编码
+        leverage: 杠杆比例
         initial_fund: 初始委托资产金额
         trustor_name: 托管人
         trustor_bank_account_name: 托管户名称
