add remarks to products

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -178,6 +178,7 @@ zh-CN:
         consultant: 投顾
         tag_names: 标签
         tags: 标签
+        remarks: 备注
         tabs:
           summary: 概况
           clients: 投资人
